# agent-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.example.json  pyproject.toml  tools.json
.github/workflows/: docs.yml  python.yml
docs/: docusaurus.config.ts  package-lock.json  tsconfig.json
docs/docs/: index.md
infra/: main.bicep  main.bicepparam
infra/modules/: ai.bicep
skills/: code-review.md
src/agent_harness/: __init__.py  __main__.py  agent.py  api.py  mcp_client.py  models.py  prompt.py  tools.py
src/agent_harness/_runtime/: __init__.py  api.py  cli.py  config.py  preflight.py
src/agent_harness/_runtime/mock/: __init__.py  dispatcher.py  payloads.py
src/mcp_server/: __init__.py  __main__.py
tests/: test_agent.py  test_prompt.py  test_tools.py
